--- a/alpha/css/stylesheet.css
+++ b/alpha/css/stylesheet.css
@@ -1,18 +1,26 @@
 :root{
     --tempColor: rgba(255, 255, 255, 0);
 }
-
+@font-face {
+    font-family: 'poppins';
+    src: url('../fonts/poppins-medium-webfont.woff2') format('woff2'),
+         url('../fonts/poppins-medium-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+}
 body{
     background-attachment: fixed;
-    background-image: linear-gradient(180deg, rgb(114, 137, 217), rgb(91, 77, 240));
+    background-image: linear-gradient(180deg, rgb(62, 42, 122), rgb(26, 21, 75));
     color: white;
     font-family: 'inter';
     margin: 2rem;
 }
 header{
     border: solid 3px white;
+    font-family: 'poppins', 'Times New Roman', Times, serif;
     font-size: 1.5rem;
     margin: 0 6rem;
+    max-height: fit-content;
     padding: 1rem 2rem;
 }
 main{
@@ -34,23 +42,49 @@ main{
     border: solid 3px white;
     margin: 0 1rem;
     padding: 1rem 1rem;
-    width: 15rem;
-}
-.textBlockMid{
-    border: solid 3px white;
-    margin: 0 1rem;
-    padding: 1rem 1rem;
-    width: 30rem;
+    width: 20rem;
 }
 .image{
-    width: 90%;
+    width: 20%;
     display: block;
     margin: 2rem auto;
 }
+.imageBox{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
 h2{
+    font-family: 'poppins', 'Times New Roman', Times, serif;
     font-size: 2rem;
 }
-@media screen and (max-width: 1050px){
+h3{
+    font-family: 'poppins', 'Times New Roman', Times, serif;
+    font-size: 1.5rem;
+}
+li{
+    font-size: 1.3rem;
+}
+:visited{
+    color: white;
+}
+.linkButton{
+    border: solid 2px white;
+    border-radius: 1rem;
+    font-size: 1.5rem;
+    max-height: fit-content;
+    max-width: fit-content;
+    padding: 1rem;
+}
+.linkButton:hover{
+    background-color: white;
+    color:rgb(26, 21, 75);
+    transition: all .15s ease-in-out;
+}
+.linkBox{
+    margin: 1rem 0;
+}
+@media screen and (max-width: 1300px){
     .interactionComponents{
         align-items: center;
         flex-direction: column;
@@ -58,7 +92,10 @@ h2{
         padding: 0;
     }
     .image{
-        width: 100%
+        width: 60%
+    }
+    .imageBox{
+        display: grid;
     }
     .textBlock{
         margin: 1rem 0;
@@ -76,7 +113,7 @@ h2{
         margin: 0;
     }
 }
-@media screen and (max-width: 500px){
+@media screen and (max-width: 700px){
     .image{
         width: 100%
     }
