--- a/beta/css/stylesheet.css
+++ b/beta/css/stylesheet.css
@@ -45,18 +45,28 @@ main{
     width: 20rem;
 }
 .image{
-    width: 20%;
+    width: 20rem;
     display: block;
-    margin: 2rem auto;
-}
-.wide{
-    width: 80%;
+    margin: 1rem auto;
 }
 .imageBox{
     display: flex;
-    flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-around;
+    margin: 1rem auto;
+    overflow: hidden;
+    padding: 2rem;
+}
+.imageWide{
+    width: 80%;
+    display: block;
+    margin: 2rem auto;
+}
+.imageBoxWide{
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 h2{
     font-family: 'poppins', 'Times New Roman', Times, serif;
@@ -66,29 +76,20 @@ h3{
     font-family: 'poppins', 'Times New Roman', Times, serif;
     font-size: 1.5rem;
 }
+h4{
+    font-family: 'poppins', 'Times New Roman', Times, serif;
+    font-size: 1.2rem;
+}
 li{
     font-size: 1.3rem;
 }
 :visited{
     color: white;
 }
-.linkButton{
-    border: solid 2px white;
-    border-radius: 1rem;
-    font-size: 1.5rem;
-    max-height: fit-content;
-    max-width: fit-content;
-    padding: 1rem;
-}
-.linkButton:hover{
-    background-color: white;
-    color:rgb(26, 21, 75);
-    transition: all .15s ease-in-out;
-}
 .linkBox{
     margin: 1rem 0;
 }
-@media screen and (max-width: 1300px){
+@media screen and (max-width: 1450px){
     .interactionComponents{
         align-items: center;
         flex-direction: column;
@@ -96,10 +97,16 @@ li{
         padding: 0;
     }
     .image{
-        width: 60%
+        margin: .25rem;
+        width: 18rem;
     }
     .imageBox{
-        display: grid;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin: 1rem auto;
+        overflow: hidden;
+        padding: 2rem;
     }
     .textBlock{
         margin: 1rem 0;
@@ -119,7 +126,10 @@ li{
 }
 @media screen and (max-width: 700px){
     .image{
-        width: 100%
+        width: 100%;
+    }
+    .imageBoxWide{
+        width: 100%;
     }
     body{
         margin: 2rem 0;
@@ -143,5 +153,23 @@ li{
         font-size: 1.5rem;
         margin: 0;
         padding: 0;
+    }
+    .linkButton{
+        font-size: 1rem;
+    }
+}
+@media screen and (min-width: 400px){
+    .linkButton{
+        border: solid 2px white;
+        border-radius: 1rem;
+        font-size: 1.5rem;
+        max-height: fit-content;
+        max-width: fit-content;
+        padding: 1rem;
+        transition: all .15s ease-in-out;
+    }
+    .linkButton:hover{
+        background-color: white;
+        color:rgb(26, 21, 75);
     }
 }
